# caface

./: .gitignore  README.md  pyproject.toml
caface/: config.py  data.py  fusion.py  main.py  model.py  pyproject.toml  trainer.py  trainer_base.py
caface/dataset_helpers/: ijb_dataset.py
caface/dataset_helpers/insightface_ijb_helper/: eval_helper.py  eval_helper_identification.py
caface/face_datasets/: feature_dataset.py
caface/losses/: cossim.py
caface/nets/: aggregator.py  arcface_net.py  fusion_net.py  styler.py  tface_model.py
caface/nets/transformer/: cluster_transformer.py  tconfig.py  transformer_module.py
caface/utils/: dist_utils.py  os_utils.py
demo/: dataset.py  inference.py  main.py  model_loader.py  run.sh  visualization.py
demo/face_alignment/: aligner.py  mtcnn.py
demo/face_alignment/mtcnn_pytorch/: README.md  extract_weights_from_caffe_models.py
demo/face_alignment/mtcnn_pytorch/src/: align_trans.py  box_utils.py  detector.py  first_stage.py
demo/face_detection/: detector.py
demo/face_detection/fastface/: module.py
demo/face_detection/fastface/adapter/: gdrive.py  http.py
demo/face_detection/fastface/api/: __init__.py
demo/face_detection/fastface/arch/lffd/: module.py
demo/face_detection/fastface/arch/lffd/blocks/: conv.py
demo/face_detection/fastface/dataset/: base.py  fddb.py  widerface.py
demo/face_detection/fastface/loss/: iou_loss.py
demo/face_detection/fastface/metric/: ap.py  ar.py  widerface_ap.py
demo/face_detection/fastface/metric/functional/: ap.py
demo/face_detection/fastface/transforms/augmentation/: blur.py  lffd_random_sample.py  random_horizontal_flip.py
demo/face_detection/fastface/utils/: box.py  cluster.py  config.py  kernel.py  random.py
preprocess/: extract_images.py  image_augmenter.py  make_center.py  mxdataset.py  precompute_features.py
validation_IJBB_IJBC/: validate_IJB_BC.py
validation_IJBB_IJBC/fusion/: average.py  cluster_and_aggregate.py
validation_IJBB_IJBC/insightface_ijb_helper/: dataloader.py  eval_helper_fusion.py
