[project]
    authors         = [{ "name" = "Original CAFace Authors" }]
    description     = ""
    name            = "caface"
    readme          = "README.md"
    requires-python = ">=3.10,<3.13"
    version         = "0.1.0"

    dependencies = [
        "checksumdir>=1.2.0",
        "einops>=0.6.0",
        "googledrivedownloader>=0.4",
        "imgaug>=0.4.0",
        "omegaconf>=2.3.0",
        "pyrootutils>=1.0.4",
        "pytorch-lightning>=2.0.0",
        "timm>=1.0.13",
        "torchvision>=0.20.1",
        "tqdm>=4.65.0",
]

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core"]

[tool.pytest.ini_options]
    addopts        = ["--color=yes", "--durations=0", "--strict-markers", "--doctest-modules"]
    filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
    log_cli        = "True"
    markers        = ["slow: slow tests"]
    minversion     = "6.0"
    testpaths      = "tests/"

[tool.coverage.report]
    exclude_lines = [
        "pragma: nocover",
        "raise NotImplementedError",
        "raise NotImplementedError()",
        "if __name__ == .__main__.:",
    ]
